load("//sol:defs.bzl", "sol_binary", "sol_go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

sol_binary(
    name = "echo_sol",
    srcs = ["Echo.sol"],
)

sol_go_library(
    name = "echo_sol_go",
    binary = ":echo_sol",
    pkg = "abigen",
)

go_test(
    name = "abigen_test",
    srcs = ["abigen_test.go"],
)
