load("@aspect_rules_sol//sol:defs.bzl", "sol_binary")
# load("@bazel_skylib//rules:common_settings.bzl", "int_flag")

# int_flag(
#     name = "solc_minor",
#     build_setting_default = 7,
# )

config_setting(
    name = "solc_minor_config",
    # values = {":solc_minor_setting": ":solc7"},
    # flag_values = {
    #     ":solc_minor"
    # }
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":solc7",
    ],
)

constraint_setting(
    name = "solc_minor_setting",
)

constraint_value(
    name = "solc7",
    constraint_setting = "solc_minor_setting",
)

platform(
    name = "linux_x86",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":solc7",
    ],
)

toolchain(
    name = "linux_7_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":solc7",
    ],
    toolchain = "@solc_0_7_6_linux-amd64//:sol_toolchain",
    toolchain_type = "@aspect_rules_sol//sol:toolchain_type",
)

sol_binary(
    name = "new",
    srcs = ["UsingFor.sol"],
    combined_json = [
        "abi",
        "bin",
        "hashes",
    ],
)

sol_binary(
    name = "old",
    srcs = ["Older.sol"],
    bin = True,
    combined_json = [],
    solc = "xxx:solc7",
)
