load("@aspect_rules_sol//sol:defs.bzl", "sol_binary")

sol_binary(
    name = "new",
    srcs = ["UsingFor.sol"],
    combined_json = [
        "abi",
        "bin",
        "hashes",
    ]
)

sol_binary(
    name = "old",
    srcs = ["Older.sol"],
    bin = True,
    combined_json = [],
    solc = "0.7.6",
)
